Add working frontend and deploy docker container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,9 @@ services:
     ports:
       - "8000:8000"
     restart: always
+  frontend:
+    build: ./frontend
+    ports:
+      - "8080:80"
+    depends_on:
+      - fastapi-weather
